--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -251,48 +251,31 @@
                             <p class="mt-3">
                                 NYC Construction Safety Training aims to offer quality training that is relevant and useful for the construction industry. These efforts include offering training courses that are useful and/or necessary to achieve success and career outcomes in the construction industry where course material may be useful and applicable, perperpetual reviews of training materials for accuracy and relevance, and development of quality staff and instructors.                                                                                                                                                                                                                         instructors..
                             </p>
-                            {% comment %} <ul class="list-inline footer-socials d-none">
+                             <ul class="list-inline footer-socials">
                                 <li class="list-inline-item">
-                                    <a href="#" aria-label="Facebook">
+                                    <a target="_blank"  href="https://www.facebook.com/CSP-Exam-Prep-103671192415440/?ref=pages_you_manage" aria-label="Facebook">
                                         <i class="fab fa-facebook-f"></i>
                                     </a>
                                 </li>
-                                <li class="list-inline-item" aria-label="Twitter">
+                                {% comment %} <li class="list-inline-item" aria-label="Twitter">
                                     <a href="#">
                                         <i class="fab fa-twitter"></i>
                                     </a>
-                                </li>
-                                <li class="list-inline-item" aria-label="Linkedin">
-                                    <a href="#">
+                                </li> {% endcomment %}
+                                <li class="list-inline-item">
+                                    <a target="_blank" aria-label="Linkedin" href="https://www.linkedin.com/in/federico-roca-asp-64aa3a54/">
                                         <i class="fab fa-linkedin"></i>
                                     </a>
                                 </li>
-                                <li class="list-inline-item" aria-label="Pinterest">
+                                {% comment %} <li class="list-inline-item" aria-label="Pinterest">
                                     <a href="#">
                                         <i class="fab fa-pinterest"></i>
                                     </a>
-                                </li>
-                            </ul> {% endcomment %}
+                                </li> {% endcomment %}
+                            </ul> 
                         </div>
                     </div>
 
-                    <div class="col-lg-2 col-sm-6 col-md-6">
-                        <div class="footer-widget mb-5 mb-lg-0">
-                            <h5 class="widget-title">Company</h5>
-                            <ul class="list-unstyled footer-links">
-                                <li>
-                                    <a href="/about/">About us</a>
-                                </li>
-                                <li>
-                                    <a href="/contact/">Contact us</a>
-                                </li>
-                                <li>
-                                    <a href="/sst-verify/">Training Verification</a>
-                                </li>
-
-                            </ul>
-                        </div>
-                    </div>
                     <div class="col-lg-2 col-sm-6 col-md-6">
                         <div class="footer-widget mb-5 mb-lg-0">
                             <h5 class="widget-title">Quick Links</h5>
@@ -312,6 +295,24 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="col-lg-2 col-sm-6 col-md-6">
+                        <div class="footer-widget mb-5 mb-lg-0">
+                            <h5 class="widget-title">Company</h5>
+                            <ul class="list-unstyled footer-links">
+                                <li>
+                                    <a href="/about/">About us</a>
+                                </li>
+                                <li>
+                                    <a href="/contact/">Contact us</a>
+                                </li>
+                                <li>
+                                    <a href="/sst-verify/">Training Verification</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </div>
+                  
                     <div class="col-lg-3 col-sm-6 col-md-6">
                         <div class="footer-widget footer-contact mb-5 mb-lg-0">
                             <h5 class="widget-title">Contact
@@ -358,12 +359,12 @@
             <div class="footer-btm">
                 <div class="container">
                     <div class="row justify-content-center align-items-center">
-                        <div class="col-lg-6">
+                        <div class="col-lg-2">
                             <div class="footer-logo">
                                 <img src="{% static 'edutim/images/logo5.png' %}" width="70" alt="NYC Construction Safety Training, LLC" class="img-fluid">
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-10">
                             <div class="copyright text-lg-center">
                                 <p>Copyright © 2021 All rights reserved | NYC Construction Safety Training, LLC</p>
                             </div>
